# personal-finance-tracker

./: .gitignore  CLAUDE.md  gui.py  main.py  pyproject.toml  seed_data.py
app/: database.py  models.py  schemas.py
app/routers/: budgets.py  categories.py  goals.py  summary.py  transactions.py
docs/: architecture.md  design.md  requirements.md
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_budgets.py  test_categories.py  test_models.py  test_summary.py  test_transactions.py
