[project]
name = "personal-finance-tracker"
version = "0.1.0"
description = "Personal finance tracker with FastAPI + SQLite"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

# Run the dev server: uv run uvicorn main:app --reload
# Seed sample data:   uv run python seed_data.py
